Resolve issues with mermaid diagram contrast in dark mode

--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -40,12 +40,6 @@ img {
     cursor: pointer;
 }
 
-.markdown-preview-view pre.mermaid {
-    background: white;
-    border-radius: 25px;
-    padding: 10px;
-}
-
 div.transclusion {
     position: relative;
     padding: 8px;
